--- a/index.html
+++ b/index.html
@@ -11,9 +11,105 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/4dce126cd2.js"
+      crossorigin="anonymous"
+    ></script>
+    <style>
+      .font-lato {
+        font-family: "Lato", sans-serif;
+      }
+    </style>
   </head>
-  <body>
-    <header></header>
+  <body class="font-lato">
+    <header>
+      <!-- navbar section start-->
+      <nav
+        class="container max-w-screen-2xl mx-auto py-10 px-8 md:px-16 lg:px-24"
+      >
+        <div
+          class="navbar py-5 bg-white md:bg-[#F85559] lg:bg-[#F85559] md:rounded-full lg:rounded-full"
+        >
+          <div class="navbar-start">
+            <ul
+              class="lg:flex gap-4 text-lg font-medium lg:text-white text-black px-4 hidden md:hidden cursor-pointer"
+            >
+              <li class="hover:lg:text-black"><a>Home</a></li>
+              <li class="hover:lg:text-black"><a>About Us</a></li>
+              <li class="hover:lg:text-black"><a>Shop</a></li>
+              <li class="hover:lg:text-black"><a>All Fruits</a></li>
+            </ul>
+            <div class="lg:hidden flex items-center gap-2 pl-4">
+              <img src="./images/logo.png" alt="" />
+              <h3
+                class="md:text-white lg:text-white text-[#121212] text-lg lg:text-[40px] font-bold cursor-pointer"
+              >
+                Fruit Burst
+              </h3>
+            </div>
+          </div>
+          <div class="navbar-center hidden gap-2 lg:flex">
+            <img src="./images/logo.png" alt="" />
+            <h3
+              class="lg:text-white text-[#121212] text-xl lg:text-[2rem] font-bold cursor-pointer"
+            >
+              Fruit Burst
+            </h3>
+          </div>
+          <div class="navbar-end">
+            <div class="dropdown">
+              <label
+                tabindex="0"
+                class="btn btn-ghost md:hidden lg:hidden ml-40"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 40 40"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </label>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content mt-3 ml-8 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
+              >
+                <li><a>Home</a></li>
+                <li><a>About Us</a></li>
+                <li><a>Shop</a></li>
+                <li><a>All Fruits</a></li>
+              </ul>
+            </div>
+
+            <div class="relative">
+              <input
+                type="text"
+                placeholder="Search here"
+                class="input input-bordered h-11 mr-8 w-[250px] rounded-full hidden md:block lg:block"
+              />
+              <div
+                class="absolute left-56 bottom-[10px] cursor-pointer hidden md:block lg:block"
+              >
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
 
     <main></main>
 
