--- a/index.html
+++ b/index.html
@@ -257,6 +257,230 @@
 
 
       </section>
+      <!-- Deal Card section start -->
+      <Section class="container max-w-screen-3xl mx-auto py-20 px-8 md:px-16 lg:px-24" >
+        <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+          <!-- card 1 -->
+          <div class="card bg-white border-2 border-[#1212121A] rounded-lg shadow-lg">
+            <figure class="px-10 pt-10 mb-5">
+              <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
+            </figure><hr class="w-1/2 mx-auto">
+            <div class="card-body items-center text-center space-y-2">
+              <h2 class="card-title text-[#121212] text-2xl font-bold">12.90$ - 18.85$</h2>
+              <p class="text-[#12121299] text-base font-medium">Apples</p>
+              <div class="rating rating-lg rating-half">
+                <input type="radio" name="rating-10" class="rating-hidden" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" checked />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+              </div>
+              <div class="card-actions">
+                <!-- Open the modal using ID.showModal() method -->
+              <button class="btn bg-white hover:bg-white text-lg font-bold text-[#F85559] hover:text-black border-none" onclick="my_modal_1.showModal()">Details</button>
+              <dialog id="my_modal_1" class="modal">
+              <form method="dialog" class="modal-box lg:space-y-2">
+                <figure class="lg:px-10 lg:pt-9 lg:mb-4">
+                  <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+              <h3 class="font-extrabold text-4xl text-[#121212]">Apples</h3>
+              <p class="lg:py-3 text-base font-medium text-[#12121299]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              <div class="rating rating-lg rating-half lg:pb-3">
+                <input type="radio" name="rating-10" class="rating-hidden" />
+                <input type="radio" name="rating-10" class="bg-[#F85559]  mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1"  />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" checked />
+              </div>
+              <div class="space-x-3">
+               <!-- if there is a button in form, it will close the modal -->
+              <button class="btn bg-white hover:bg-white text-[#F85559] hover:text-black border-[#F85559] hover:border-[#F85559] lg:text-lg font-bold">Close</button>
+              <button class="btn text-white hover:text-black bg-[#F85559] border-none hover:bg-[#F85559] lg:text-lg font-bold">Buy Now</button>
+               </div>
+              </form>
+              </dialog>
+              </div>
+            </div>
+          </div>
+          <!-- card 2 -->
+          <div class="card bg-white border-2 border-[#1212121A] rounded-lg shadow-lg">
+            <figure class="px-10 pt-10 mb-5">
+              <img src="./images/fruit7.png" alt="Shoes" class="rounded-xl" />
+            </figure><hr class="w-1/2 mx-auto">
+            <div class="card-body items-center text-center space-y-2">
+              <h2 class="card-title text-[#121212] text-2xl font-bold">12.90$ - 18.85$</h2>
+              <p class="text-[#12121299] text-base font-medium">Orange</p>
+              <div class="rating rating-lg rating-half">
+                <input type="radio" name="rating-10" class="rating-hidden" />
+                <input type="radio" name="rating-10" class="bg-[#F85559]  mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" checked />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+              </div>
+              <div class="card-actions">
+                <!-- Open the modal using ID.showModal() method -->
+              <button class="btn bg-white hover:bg-white text-lg font-bold text-[#F85559] hover:text-black border-none" onclick="my_modal_1.showModal()">Details</button>
+              <dialog id="my_modal_2" class="modal">
+              <form method="dialog" class="modal-box space-y-3">
+                <figure class="px-10 pt-10 mb-5">
+                  <img src="./images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+              <h3 class="font-extrabold text-4xl text-[#121212]">Orange</h3>
+              <p class="py-4 text-base font-medium text-[#12121299]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              <div class="rating rating-lg rating-half pb-4">
+                <input type="radio" name="rating-10" class="rating-hidden" />
+                <input type="radio" name="rating-10" class="bg-[#F85559]  mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" checked />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+              </div>
+              <div class="space-x-3">
+               <!-- if there is a button in form, it will close the modal -->
+              <button class="btn bg-white hover:bg-white text-[#F85559] hover:text-black border-[#F85559] hover:border-[#F85559] text-lg font-bold">Close</button>
+              <button class="btn text-white hover:text-black bg-[#F85559] border-none hover:bg-[#F85559] text-lg font-bold">Buy Now</button>
+               </div>
+              </form>
+              </dialog>
+              </div>
+            </div>
+          </div>
+          <!-- card 3 -->
+          <div class="card bg-white border-2 border-[#1212121A] rounded-lg shadow-lg">
+            <figure class="px-10 pt-10 mb-5">
+              <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
+            </figure><hr class="w-1/2 mx-auto">
+            <div class="card-body items-center text-center space-y-2">
+              <h2 class="card-title text-[#121212] text-2xl font-bold">12.90$ - 18.85$</h2>
+              <p class="text-[#12121299] text-base font-medium">Red Dragon</p>
+              <div class="rating rating-lg rating-half">
+                <input type="radio" name="rating-10" class="rating-hidden" />
+                <input type="radio" name="rating-10" class="bg-[#F85559]  mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" checked/>
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+              </div>
+              <div class="card-actions">
+                <!-- Open the modal using ID.showModal() method -->
+              <button class="btn bg-white hover:bg-white text-lg font-bold text-[#F85559] hover:text-black border-none" onclick="my_modal_1.showModal()">Details</button>
+              <dialog id="my_modal_3" class="modal">
+              <form method="dialog" class="modal-box space-y-3">
+                <figure class="px-10 pt-10 mb-5">
+                  <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+              <h3 class="font-extrabold text-4xl text-[#121212]">Red Dragon</h3>
+              <p class="py-4 text-base font-medium text-[#12121299]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              <div class="rating rating-lg rating-half pb-4">
+                <input type="radio" name="rating-10" class="rating-hidden" />
+                <input type="radio" name="rating-10" class="bg-[#F85559]  mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" checked />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+              </div>
+              <div class="space-x-3">
+               <!-- if there is a button in form, it will close the modal -->
+              <button class="btn bg-white hover:bg-white text-[#F85559] hover:text-black border-[#F85559] hover:border-[#F85559] text-lg font-bold">Close</button>
+              <button class="btn text-white hover:text-black bg-[#F85559] border-none hover:bg-[#F85559] text-lg font-bold">Buy Now</button>
+               </div>
+              </form>
+              </dialog>
+              </div>
+            </div>
+          </div>
+          <!-- card 4 -->
+          <div class="card bg-white border-2 border-[#1212121A] rounded-lg shadow-lg">
+            <figure class="px-10 pt-10 mb-5">
+              <img src="./images/fruit9.png" alt="Shoes" class="rounded-xl" />
+            </figure><hr class="w-1/2 mx-auto">
+            <div class="card-body items-center text-center space-y-2">
+              <h2 class="card-title text-[#121212] text-2xl font-bold">12.90$ - 18.85$</h2>
+              <p class="text-[#12121299] text-base font-medium">Banana</p>
+              <div class="rating rating-lg rating-half">
+                <input type="radio" name="rating-10" class="rating-hidden" />
+                <input type="radio" name="rating-10" class="bg-[#F85559]  mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" checked />
+              </div>
+              <div class="card-actions">
+                <!-- Open the modal using ID.showModal() method -->
+              <button class="btn bg-white hover:bg-white text-lg font-bold text-[#F85559] hover:text-black border-none" onclick="my_modal_1.showModal()">Details</button>
+              <dialog id="my_modal_4" class="modal">
+              <form method="dialog" class="modal-box space-y-3">
+                <figure class="px-10 pt-10 mb-5">
+                  <img src="./images/fruit9.png" alt="" class="rounded-xl" />
+                </figure>
+              <h3 class="font-extrabold text-4xl text-[#121212]">Banana</h3>
+              <p class="py-4 text-base font-medium text-[#12121299]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              <div class="rating rating-lg rating-half pb-4">
+                <input type="radio" name="rating-10" class="rating-hidden" />
+                <input type="radio" name="rating-10" class="bg-[#F85559]  mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" checked />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-1" />
+                <input type="radio" name="rating-10" class="bg-[#F85559] mask mask-star-2 mask-half-2" />
+              </div>
+              <div class="space-x-3">
+               <!-- if there is a button in form, it will close the modal -->
+              <button class="btn bg-white hover:bg-white text-[#F85559] hover:text-black border-[#F85559] hover:border-[#F85559] text-lg font-bold">Close</button>
+              <button class="btn text-white hover:text-black bg-[#F85559] border-none hover:bg-[#F85559] text-lg font-bold">Buy Now</button>
+               </div>
+              </form>
+              </dialog>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="flex justify-center pt-4 md:pt-6 lg:pt-10">
+          <button class="btn bg-[#F85559] hover:bg-[#F85559] rounded-lg text-white hover:text-black text-xl font-extrabold">Shop All</button>
+        </div>
+      </Section>
 
 
 
