--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
       <!-- navbar section start-->
       <nav
-        class="container max-w-screen-3xl mx-auto py-10 px-8 md:px-16 lg:px-24"
+        class="container max-w-screen-3xl mx-auto pt-10 px-8 md:px-16 lg:px-24"
       >
         <div
           class="navbar py-5 bg-white md:bg-[#F85559] lg:bg-[#F85559] md:rounded-full lg:rounded-full"
@@ -284,28 +284,29 @@
           </div>
         </div>
 
-        <div class="hidden lg:block">
+        <div class="hidden  lg:block">
+
           <div
-            class="flex justify-center absolute bg-white rounded-lg shadow-xl w-auto mx-auto h-48 -mt-24 lg:ml-64 items-center px-20"
+            class="flex justify-center absolute bg-white rounded-lg shadow-xl w-auto mx-auto h-48 -mt-24 lg:ml-40 items-center px-24 gap-6"
           >
             <div class="flex-1">
-              <img class="" src="./images/fruit1.png" alt="" />
+              <img class="py-4" src="./images/fruit1.png" alt="" />
               <p class="flex justify-center text-sm">Red Grape</p>
             </div>
             <div class="flex-1">
-              <img class="" src="./images/fruit2.png" alt="" />
+              <img class="py-4" src="./images/fruit2.png" alt="" />
               <p class="flex justify-center text-sm">Orange</p>
             </div>
             <div class="flex-1">
-              <img class="" src="./images/fruit3.png" alt="" />
+              <img class="py-4" src="./images/fruit3.png" alt="" />
               <p class="flex justify-center text-sm">Mango</p>
             </div>
             <div class="flex-1">
-              <img class="" src="./images/fruit4.png" alt="" />
+              <img class="py-4" src="./images/fruit4.png" alt="" />
               <p class="flex justify-center text-sm">Strawberry</p>
             </div>
             <div class="flex-1">
-              <img class="" src="./images/fruit5.png" alt="" />
+              <img class="py-4" src="./images/fruit5.png" alt="" />
               <p class="flex justify-center text-sm">Pomegranate</p>
             </div>
           </div>
@@ -460,7 +461,7 @@
                 />
               </div>
               <div class="card-actions">
-                <!-- Open the modal using ID.showModal() method -->
+ 
                 <button
                   class="btn bg-white hover:bg-white text-lg font-bold text-[#F85559] hover:text-black border-none"
                   onclick="my_modal_1.showModal()"
@@ -542,7 +543,7 @@
                       />
                     </div>
                     <div class="space-x-3">
-                      <!-- if there is a button in form, it will close the modal -->
+
                       <button
                         class="btn bg-white hover:bg-white text-[#F85559] hover:text-black border-[#F85559] hover:border-[#F85559] lg:text-lg font-bold"
                       >
@@ -627,7 +628,7 @@
                 />
               </div>
               <div class="card-actions">
-                <!-- Open the modal using ID.showModal() method -->
+
                 <button
                   class="btn bg-white hover:bg-white text-lg font-bold text-[#F85559] hover:text-black border-none"
                   onclick="my_modal_1.showModal()"
@@ -709,7 +710,7 @@
                       />
                     </div>
                     <div class="space-x-3">
-                      <!-- if there is a button in form, it will close the modal -->
+
                       <button
                         class="btn bg-white hover:bg-white text-[#F85559] hover:text-black border-[#F85559] hover:border-[#F85559] text-lg font-bold"
                       >
@@ -794,7 +795,7 @@
                 />
               </div>
               <div class="card-actions">
-                <!-- Open the modal using ID.showModal() method -->
+
                 <button
                   class="btn bg-white hover:bg-white text-lg font-bold text-[#F85559] hover:text-black border-none"
                   onclick="my_modal_1.showModal()"
@@ -876,7 +877,7 @@
                       />
                     </div>
                     <div class="space-x-3">
-                      <!-- if there is a button in form, it will close the modal -->
+
                       <button
                         class="btn bg-white hover:bg-white text-[#F85559] hover:text-black border-[#F85559] hover:border-[#F85559] text-lg font-bold"
                       >
@@ -961,7 +962,7 @@
                 />
               </div>
               <div class="card-actions">
-                <!-- Open the modal using ID.showModal() method -->
+
                 <button
                   class="btn bg-white hover:bg-white text-lg font-bold text-[#F85559] hover:text-black border-none"
                   onclick="my_modal_1.showModal()"
@@ -1043,7 +1044,7 @@
                       />
                     </div>
                     <div class="space-x-3">
-                      <!-- if there is a button in form, it will close the modal -->
+
                       <button
                         class="btn bg-white hover:bg-white text-[#F85559] hover:text-black border-[#F85559] hover:border-[#F85559] text-lg font-bold"
                       >
@@ -1093,7 +1094,7 @@
                 making it over 2000 years old.
               </p>
             </div>
-            <!-- member area -->
+            <!-- Team content -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-20">
               <!-- member 1 -->
               <div class="mx-auto">
@@ -1101,9 +1102,9 @@
                 <h4 class="text-2xl font-bold pb-1">Awlad Hossain</h4>
                 <p class="font-medium pb-2">Fruits Expert</p>
                 <div class="flex justify-center gap-3">
-                  <img src="./images/facebook.svg" alt="" />
-                  <img src="./images/twitter.svg" alt="" />
-                  <img src="./images/linkedin.svg" alt="" />
+                  <a href=""><img src="./images/facebook.svg" alt="" /></a>
+                  <a href=""><img src="./images/twitter.svg" alt="" /></a>
+                  <a href=""><img src="./images/linkedin.svg" alt="" /></a>
                 </div>
               </div>
               <!-- member 2 -->
@@ -1112,9 +1113,9 @@
                 <h4 class="text-2xl font-bold pb-1">Safia Chowdhury</h4>
                 <p class="font-medium pb-2">Fruits Expert</p>
                 <div class="flex justify-center gap-3">
-                  <img src="./images/facebook.svg" alt="" />
-                  <img src="./images/twitter.svg" alt="" />
-                  <img src="./images/linkedin.svg" alt="" />
+                  <a href=""><img src="./images/facebook.svg" alt="" /></a>
+                  <a href=""><img src="./images/twitter.svg" alt="" /></a>
+                  <a href=""><img src="./images/linkedin.svg" alt="" /></a>
                 </div>
               </div>
               <!-- member 3 -->
@@ -1123,9 +1124,9 @@
                 <h4 class="text-2xl font-bold pb-1">Rokib Hossain</h4>
                 <p class="font-medium pb-2">Fruits Expert</p>
                 <div class="flex justify-center gap-3">
-                  <img src="./images/facebook.svg" alt="" />
-                  <img src="./images/twitter.svg" alt="" />
-                  <img src="./images/linkedin.svg" alt="" />
+                  <a href=""><img src="./images/facebook.svg" alt="" /></a>
+                  <a href=""><img src="./images/twitter.svg" alt="" /></a>
+                  <a href=""><img src="./images/linkedin.svg" alt="" /></a>
                 </div>
               </div>
               <!-- member 4 -->
@@ -1134,17 +1135,78 @@
                 <h4 class="text-2xl font-bold pb-1">Chaity</h4>
                 <p class="font-medium pb-2">Fruits Expert</p>
                 <div class="flex justify-center gap-3">
-                  <img src="./images/facebook.svg" alt="" />
-                  <img src="./images/twitter.svg" alt="" />
-                  <img src="./images/linkedin.svg" alt="" />
+                  <a href=""><img src="./images/facebook.svg" alt="" /></a>
+                  <a href=""><img src="./images/twitter.svg" alt="" /></a>
+                  <a href=""><img src="./images/linkedin.svg" alt="" /></a>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <!-- Why us section start -->
+     <section class="container max-w-screen-3xl mx-auto py-10 px-8 md:px-16 lg:px-24" >
+      <div class="text-center">
+        <h3 class="text-3xl md:text-4xl lg:text-5xl font-extrabold mb-6 text-[#121212]">Why Choose Us</h3>
+        <p class="max-w-sm md:max-w-xl lg:max-w-2xl mx-auto mb-10 text-base font-medium text-[#12121299]">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+      </div>
+       <div class="flex flex-col md:flex-col lg:flex-row pt-5">
+         <div class="flex flex-col-reverse md:flex-col-reverse lg:flex-row">
+         <div class="">
+          <div class="flex justify-center items-center flex-col lg:flex-row gap-6">
+          <img class="bg-[#1212121A] border-8 border-[#1212121A] rounded-full mt-10 lg:mt-0" src="./images/icon1.svg" alt="">
+          <div class="space-y-2 text-center lg:text-left">
+           <h5 class="text-2xl font-extrabold text-[#121212]">Dedicated Team</h5><hr class="ml-[72px] md:ml-24 lg:ml-0 w-24 border-[#121212CC]">
+           <p class="font-medium text-[#12121299] w-60 md:w-72 lg:w-80">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+          </div>
+          </div>
+          <div class="flex justify-center items-center flex-col lg:flex-row gap-6 mt-10">
+          <img class="bg-[#1212121A] border-8 border-[#1212121A] rounded-full " src="./images/icon2.svg" alt="">
+          <div class="space-y-2 text-center lg:text-left">
+           <h5 class="text-2xl font-extrabold text-[#121212]">Fresh is Best</h5><hr class="ml-[72px] md:ml-24 lg:ml-0 w-24 border-[#121212CC]">
+           <p class="font-medium text-[#12121299] w-60 md:w-72 lg:w-80">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+          </div>
+          </div>
+          <div class="flex justify-center items-center flex-col lg:flex-row gap-6 mt-10">
+          <img class="bg-[#1212121A] border-8 border-[#1212121A] rounded-full " src="./images/icon3.svg" alt="">
+          <div class="space-y-2 text-center lg:text-left">
+           <h5 class="text-2xl font-extrabold text-[#121212]">Gift Certificates</h5><hr class="ml-[72px] md:ml-24 lg:ml-0 w-24 border-[#121212CC]">
+           <p class="font-medium text-[#12121299] w-60 md:w-72 lg:w-80">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+          </div>
+          </div>
+        </div>
+        <div class="">
+          <img class=" md:w-[736px] lg:w-full md:h-[420px] lg:h-auto" src="./images/whychoose1.png" alt="">
+        </div>
+         </div>
+          <div class="">
+            <div class="flex justify-center items-center flex-col md:flex-col lg:flex-row-reverse gap-6">
+            <img class="bg-[#1212121A] border-8 border-[#1212121A] rounded-full mt-12 lg:mt-0" src="./images/icon4.svg" alt="">
+            <div class="space-y-2">
+             <h5 class="text-2xl font-extrabold text-[#121212] text-center lg:text-right">Integrated Supplier</h5><hr class="ml-[72px] md:ml-24 lg:ml-56 w-24 border-[#121212CC]">
+             <p class="font-medium text-[#12121299] w-60 md:w-72 lg:w-80 text-center lg:text-right">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+            </div>
+            <div class="flex justify-center items-center gap-6 flex-col md:flex-col lg:flex-row-reverse mt-10">
+            <img class="bg-[#1212121A] border-8 border-[#1212121A] rounded-full mt-8 md:mt-12 lg:mt-0" src="./images/icon5.svg" alt="">
+            <div class="space-y-2">
+             <h5 class="text-2xl font-extrabold text-[#121212] text-center lg:text-right">Sustainable Practice</h5><hr class="ml-[72px] md:ml-24 lg:ml-56 w-24 border-[#121212CC]">
+             <p class="font-medium text-[#12121299] w-60 md:w-72 lg:w-80 text-center lg:text-right">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+            </div>
+            <div class="flex justify-center items-center gap-6 flex-col md:flex-col lg:flex-row-reverse mt-10">
+            <img class="bg-[#1212121A] border-8 border-[#1212121A] rounded-full mt-8 md:mt-12 lg:mt-0" src="./images/icon6.svg" alt="">
+            <div class="space-y-2">
+             <h5 class="text-2xl font-extrabold text-[#121212] text-center lg:text-right">The Benefits Only</h5><hr class="ml-[72px] md:ml-24 lg:ml-56 w-24 border-[#121212CC]">
+             <p class="font-medium text-[#12121299] w-60 md:w-72 lg:w-80 text-center lg:text-right">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+            </div>
+          </div>
+       </div>
+     </section>
     </main>
+       <footer>
 
-    <footer></footer>
+       </footer>
   </body>
 </html>
