--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
       <section
         class="container max-w-screen-3xl mx-auto py-10 px-8 md:px-16 lg:px-24"
       >
+      <div class=" relative ">
         <div class="carousel w-full h-[300px] md:h-full">
           <!-- slide 1 -->
           <div id="slide1" class="carousel-item relative w-full">
@@ -284,10 +285,10 @@
           </div>
         </div>
 
-        <div class="hidden  lg:block">
+        <div class="hidden lg:block">
 
           <div
-            class="flex justify-center absolute bg-white rounded-lg shadow-xl w-auto mx-auto h-48 -mt-24 lg:ml-40 items-center px-24 gap-6"
+            class="flex justify-center absolute bg-white rounded-lg shadow-xl w-Auto mx-auto h-48 -mt-24 lg:ml-40 items-center px-24 gap-6"
           >
             <div class="flex-1">
               <img class="py-4" src="./images/fruit1.png" alt="" />
@@ -311,6 +312,7 @@
             </div>
           </div>
         </div>
+      </div>
       </section>
     </header>
 
@@ -1150,7 +1152,8 @@
         <h3 class="text-3xl md:text-4xl lg:text-5xl font-extrabold mb-6 text-[#121212]">Why Choose Us</h3>
         <p class="max-w-sm md:max-w-xl lg:max-w-2xl mx-auto mb-10 text-base font-medium text-[#12121299]">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
       </div>
-       <div class="flex flex-col md:flex-col lg:flex-row pt-5">
+      <div class="flex justify-around">
+       <div class="flex flex-col md:flex-col lg:flex-row justify-between pt-5">
          <div class="flex flex-col-reverse md:flex-col-reverse lg:flex-row">
          <div class="">
           <div class="flex justify-center items-center flex-col lg:flex-row gap-6">
@@ -1176,7 +1179,7 @@
           </div>
         </div>
         <div class="">
-          <img class=" md:w-[736px] lg:w-full md:h-[420px] lg:h-auto" src="./images/whychoose1.png" alt="">
+          <img src="./images/whychoose1.png" alt="">
         </div>
          </div>
           <div class="">
@@ -1203,10 +1206,36 @@
             </div>
           </div>
        </div>
+      </div>
      </section>
     </main>
-       <footer>
-
-       </footer>
+       <!-- Footer Section start -->
+      <footer class="footer font-lato footer-center p-5 md:p-10 lg:p-10 bg-black text-white rounded">
+        <div class="flex justify-center items-center pt-8 gap-2">
+          <img src="./images/logo.png" alt="">
+          <h4 class="text-4xl font-bold">Fruit Burst</h4>
+        </div>
+        <div class="flex justify-evenly items-center flex-wrap gap-8 md:gap-8 lg:gap-8 text-lg font-medium">
+          <a href="">Home</a>
+          <a href="">Shop</a>
+          <a href="">All Fruits</a>
+          <a href="">Support</a>
+          <a href="">My Account</a>
+        </div> 
+        <div>
+          <div class="grid grid-flow-col gap-6 md:gap-8 lg:gap-8">
+            <a href=""><img src="./images/Social-icon1.svg" alt=""></a>
+            <a href=""><img src="./images/Social-icon2.svg" alt=""></a>
+            <a href=""><img src="./images/Social-icon3.svg" alt=""></a>
+            <a href=""><img src="./images/Social-icon4.svg" alt=""></a>
+            <a href=""><img src="./images/Social-icon5.svg" alt=""></a>
+            <a href=""><img src="./images/Social-icon6.svg" alt=""></a>
+            
+          </div>
+        </div> 
+        <div>
+          <p>Copyright © 2023 - All right reserved</p>
+        </div>
+      </footer>
   </body>
 </html>
